kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    configmap.reloader.stakater.com/reload: "frontend"
    secret.reloader.stakater.com/reload: "frontend"
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app-service: nextjs
  name: frontend-nextjs
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app-service: frontend-nextjs
  template:
    metadata:
      labels:
        sidecar.istio.io/force-inject: "true"
        app-service: frontend-nextjs
    spec:
      containers:
        - image: frontend_main
          imagePullPolicy: IfNotPresent
          name: frontend-nextjs
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          command:
            - npm
            - run
            - start
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-nginx
  labels:
    app-service: nginx
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app-service: frontend-nginx
  template:
    metadata:
      labels:
        sidecar.istio.io/force-inject: "true"
        app-service: frontend-nginx
    spec:
      containers:
        - image: frontend_nginx
          imagePullPolicy: IfNotPresent
          name: frontend-nginx
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
      terminationGracePeriodSeconds: 10
      imagePullSecrets:
        - name: regcred
