kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nextjs
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app-service: frontend-nextjs
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-nginx
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app-service: frontend-nginx
  type: ClusterIP
